--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,21 +1,21 @@
 {
-  "background_color": "$SIGNALS_BACKGROUND_COLOR",
+  "background_color": "#ffffff",
   "display": "fullscreen",
   "icons": [
     {
-      "src": "$SIGNALS_IOS_ICON",
+      "src": "/icon_180x180.png",
       "sizes": "180x180",
       "type": "image/png"
     },
     {
-      "src": "$SIGNALS_ANDROID_ICON",
+      "src": "/icon_192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     }
   ],
-  "name": "$SIGNALS_PWA_TITLE",
+  "name": "SIA - Signalen Informatievoorziening Amsterdam",
   "orientation": "portrait",
-  "short_name": "$SIGNALS_PWA_SHORT_TITLE",
+  "short_name": "SIA",
   "start_url": "/",
-  "theme_color": "$SIGNALS_THEME_COLOR"
+  "theme_color": "#ec0000"
 }
