--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
     "date-fns": "^2.14.0",
+    "esri-loader": "^2.15.0",
     "history": "^4.10.1",
     "hoist-non-react-statics": "^3.3.2",
     "immutable": "^4.0.0-rc.12",
@@ -100,6 +101,7 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
+    "@arcgis/webpack-plugin": "^4.16.3",
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.2",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
